--- a/ASCIIPlayer/.classpath
+++ b/ASCIIPlayer/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="lib" path="lib/jline-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jcodec-0.1.5.jar" sourcepath="lib/jcodec-0.1.5-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
